@@ -258,15 +258,15 @@ public class NyfalisUnits {
             armor = 2;
             hitSize = 11f;
             health = 350;
-            segments = 5;
+            segments = 8;
             speed = 2.25f;
             segmentScl = 7f;
-            rotateSpeed = 8f;
+            rotateSpeed = 10f;
             legMoveSpace = 1.1f;
             crushDamage = 0.25f;
-            segmentMaxRot = 20f;
+            segmentMaxRot = 80f;
+            segmentRotSpeed = 5f;
             crawlSlowdownFrac = 1f;
-            segmentRotSpeed = 0.7f;
             drownTimeMultiplier = 4f;
             allowLegStep = true;
             omniMovement = drawBody = false;
